# querencia

./: .gitignore  README.md  package.json  pnpm-lock.yaml  querencia-description.md  tsconfig.base.json  turbo.json
services/pipeline/: pyproject.toml
services/pipeline/src/querencia_pipeline/: __init__.py
services/pipeline/src/querencia_pipeline/modules/aggregation/: __init__.py  aggregate.py  anonymity.py  prioritize.py
services/pipeline/src/querencia_pipeline/modules/alert_evaluation/: evaluate.py
services/pipeline/src/querencia_pipeline/modules/geocoding/: __init__.py  geocode.py  geocoder_interface.py  mock_geocoder.py
services/pipeline/src/querencia_pipeline/modules/hex_assignment/: __init__.py  assign.py
services/pipeline/src/querencia_pipeline/modules/kpi_generation/: __init__.py  executive_metrics.py  extended_history.py  generate.py  metric_keys.py  trend_series_generator.py
services/pipeline/src/querencia_pipeline/modules/models/: __init__.py  aggregated_cell.py  executive_metric.py  geocoded_record.py  hex_record.py  kpi_snapshot.py  normalized_record.py  raw_record.py  taxonomy.py  trend_point.py  trend_series.py
services/pipeline/src/querencia_pipeline/modules/normalization/: __init__.py  (+5 more)
services/pipeline/tests/: __init__.py  test_alert_evaluation.py  test_blend.py  test_catalog_expansion.py  test_executive_metrics.py  test_extended_history.py  test_ingestion.py  test_normalization.py  test_report_ingestion.py  test_report_validation.py  test_trend_series.py  test_validation.py
services/pipeline/tests/fixtures/: sample_csv_rows.py
(+235 files in other folders)
