[project]
name = "querencia-pipeline"
version = "0.1.0"
description = "Querencia ingestion, normalization, and aggregation pipeline."

requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "h3>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
